[workspace]
resolver = "2"
members = [
    "crates/clamsform",
    "crates/clamsform-core",
    "crates/clamsform-benches"
    ]
default-members = [
  "crates/*",
]

[workspace.dependencies]
polars = {version = "0.46.0", features = ["lazy", "ndarray"]}
thiserror = "2.0.11"
rayon = "1.10.0"
ndarray = {version = "0.16.1", features = ["approx"]}
approx = "0.5.1"
